--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Success message end -->
   
-  <div class="attribution bg-[#f4d04e]">
+  <div class="attribution bg-[#000000]">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
